--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
   </div>
  
   <div class="col-md-6" style=" padding-top: 9%; padding-right: 3%;">
-  <img src="Co1.png" style="height: 100%; width: 100%; border-radius: 8%;">
+  <img src="co1.png" style="height: 100%; width: 100%; border-radius: 8%;">
   </div>
   <div class="col-md-6" style=" padding-top: 9%; padding-right: 3%;">
-  <img src="Co2.png" style="height: 100%; width: 100%; border-radius: 8%;">
+  <img src="co2.png" style="height: 100%; width: 100%; border-radius: 8%;">
   </div>
 
 
