--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
   <div class="row " style=" padding-top: 19%; padding-bottom: 2%;">
   <h1 id="Technologies" class="display-3 fw-bold" >Technologies</h1>
  
-<div class="col-11">
+<div class="col-md-11">
     <div style="padding-top: 13%;">
     <h4 style="font-weight: bold;">Html</h4>
     <div class="progress-bar-container" style="border-radius: 25px; box-shadow: inset 0 1px 3px; width: 100%;">
@@ -254,11 +254,11 @@
     </div>
     </div>
     </div>
-    <div class="col-1" style="padding-top: 12%;">
+    <div class="col-md-1" style="padding-top: 12%;">
     <h6 style="font-weight: bold;">Advanced</h6>
 </div>
 
-  <div class="col-11">
+  <div class="col-md-11">
     <div style="padding-top: 5%;">
     <h4 style="font-weight: bold;">Css</h4>
     <div class="progress-bar-container" style="border-radius: 25px; box-shadow: inset 0 1px 3px; width: 100%;">
@@ -268,11 +268,11 @@
       </div>
       </div>
       </div>
-      <div class="col-1" style="padding-top: 5%;">
+      <div class="col-md-1" style="padding-top: 5%;">
       <h6 style="font-weight: bold;">Advanced</h6>
   </div>
 
-  <div class="col-11">
+  <div class="col-md-11">
     <div style="padding-top: 5%;">
     <h4 style="font-weight: bold;">Java</h4>
     <div class="progress-bar-container" style="border-radius: 25px; box-shadow: inset 0 1px 3px; width: 80%;">
@@ -282,11 +282,11 @@
       </div>
       </div>
       </div>
-      <div class="col-1" style="padding-top: 5%;">
+      <div class="col-md-1" style="padding-top: 5%;">
       <h6 style="font-weight: bold;">Imtermediate</h6>
   </div>
 
-  <div class="col-11">
+  <div class="col-md-11">
     <div style="padding-top: 5%;">
     <h4 style="font-weight: bold;">Javascript</h4>
     <div class="progress-bar-container" style="border-radius: 25px; box-shadow: inset 0 1px 3px; width: 50%;">
@@ -296,11 +296,11 @@
       </div>
       </div>
       </div>
-      <div class="col-1" style="padding-top: 5%;">
+      <div class="col-md-1" style="padding-top: 5%;">
       <h6 style="font-weight: bold;">Imtermediate</h6>
   </div>
 
-  <div class="col-11">
+  <div class="col-md-11">
     <div style="padding-top: 5%;">
     <h4 style="font-weight: bold;">Mysql</h4>
     <div class="progress-bar-container" style="border-radius: 25px; box-shadow: inset 0 1px 3px; width: 40%;">
@@ -310,11 +310,11 @@
       </div>
       </div>
       </div>
-      <div class="col-1" style="padding-top: 5%;">
+      <div class="col-md-1" style="padding-top: 5%;">
       <h6 style="font-weight: bold;">Beginner</h6>
   </div>
 
-  <div class="col-11">
+  <div class="col-md-11">
     <div style="padding-top: 5%;">
     <h4 style="font-weight: bold;">Bootstrap</h4>
     <div class="progress-bar-container" style="border-radius: 25px; box-shadow: inset 0 1px 3px; width: 95%;">
@@ -324,11 +324,11 @@
       </div>
       </div>
       </div>
-      <div class="col-1" style="padding-top: 5%;">
+      <div class="col-md-1" style="padding-top: 5%;">
       <h6 style="font-weight: bold;">Advanced</h6>
   </div>
   
-  <div class="col-11">
+  <div class="col-md-11">
     <div style="padding-top: 5%;">
     <h4 style="font-weight: bold;">Wordpress</h4>
     <div class="progress-bar-container" style="border-radius: 25px; box-shadow: inset 0 1px 3px; width: 70%;">
@@ -338,11 +338,11 @@
       </div>
       </div>
       </div>
-      <div class="col-1" style="padding-top: 5%;">
+      <div class="col-md-1" style="padding-top: 5%;">
       <h6 style="font-weight: bold;">Intermediate</h6>
   </div>
 
-  <div class="col-11">
+  <div class="col-md-11">
     <div style="padding-top: 5%;">
     <h4 style="font-weight: bold;">Visual Studio</h4>
     <div class="progress-bar-container" style="border-radius: 25px; box-shadow: inset 0 1px 3px; width: 100%;">
@@ -352,11 +352,11 @@
       </div>
       </div>
       </div>
-      <div class="col-1" style="padding-top: 5%;">
+      <div class="col-md-1" style="padding-top: 5%;">
         <h6 style="font-weight: bold;">Advanced</h6>
   </div>
 
-  <div class="col-11">
+  <div class="col-md-11">
     <div style="padding-top: 5%;">
     <h4 style="font-weight: bold;">Springboot</h4>
     <div class="progress-bar-container" style="border-radius: 25px; box-shadow: inset 0 1px 3px; width: 70%;">
@@ -366,11 +366,11 @@
       </div>
       </div>
       </div>
-      <div class="col-1" style="padding-top: 5%;">
+      <div class="col-md-1" style="padding-top: 5%;">
       <h6 style="font-weight: bold;">Intermediate</h6>
   </div>
 
-  <div class="col-11">
+  <div class="col-md-11">
     <div style="padding-top: 5%;">
     <h4 style="font-weight: bold;">Web Desining</h4>
     <div class="progress-bar-container" style="border-radius: 25px; box-shadow: inset 0 1px 3px; width: 95%;">
@@ -380,11 +380,11 @@
       </div>
       </div>
       </div>
-      <div class="col-1" style="padding-top: 5%;">
+      <div class="col-md-1" style="padding-top: 5%;">
       <h6 style="font-weight: bold;">Advanced</h6>
   </div>
 
-  <div class="col-11">
+  <div class="col-md-11">
     <div style="padding-top: 5%;">
     <h4 style="font-weight: bold;">Error Analysis</h4>
     <div class="progress-bar-container" style="border-radius: 25px; box-shadow: inset 0 1px 3px; width: 90%;">
@@ -394,11 +394,11 @@
       </div>
       </div>
       </div>
-      <div class="col-1" style="padding-top: 5%;">
+      <div class="col-md-1" style="padding-top: 5%;">
       <h6 style="font-weight: bold;">Advanced</h6>
   </div>
 
-  <div class="col-11">
+  <div class="col-md-11">
     <div style="padding-top: 5%;">
     <h4 style="font-weight: bold;">Android Studio</h4>
     <div class="progress-bar-container" style="border-radius: 25px; box-shadow: inset 0 1px 3px; width: 60%;">
@@ -408,11 +408,11 @@
       </div>
       </div>
       </div>
-      <div class="col-1" style="padding-top: 5%;">
+      <div class="col-md-1" style="padding-top: 5%;">
       <h6 style="font-weight: bold;">Intermediate</h6>
   </div>
 
-  <div class="col-11">
+  <div class="col-md-11">
     <div style="padding-top: 5%;">
     <h4 style="font-weight: bold;">Xml</h4>
     <div class="progress-bar-container" style="border-radius: 25px; box-shadow: inset 0 1px 3px; width: 40%;">
@@ -422,7 +422,7 @@
       </div>
       </div>
       </div>
-      <div class="col-1" style="padding-top: 5%;">
+      <div class="col-md-1" style="padding-top: 5%;">
       <h6 style="font-weight: bold;">Beginner</h6>
   </div>
 
