--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <h1 class="display-2 fw-bold" style="background: linear-gradient(to left, rgb(204, 108, 233), rgb(143, 160, 245));
     -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Hello, I'm Anjali Mukund</h1>
     <h5 style="padding: 2%;">A Passionate and a hardworking candidate ready to contribute the skills to your organization.</h5>
-    <a id="cvbutton" class="btn mt-4 mb-4 btn-dark " style="background: linear-gradient(to left, rgb(98, 113, 245), rgb(76, 198, 242)); border: 0; width: 15%;" href="AnjaliResume.pdf" download button>Get CV</a>
+    <a id="cvbutton" class="btn mt-4 mb-4 btn-dark " style="background: linear-gradient(to left, rgb(98, 113, 245), rgb(76, 198, 242)); border: 0; width: 15%;" href="AnjaliCV.pdf" download button>Get CV</a>
     
     <h3 style="padding: 3%;">
     <a href="mailto:anjalim1006@gmail.com"><i class="bi bi-envelope text-light"></i></a>
